[package]
name = "pinix"
description = " Progress In Nix - Pacman inspired frontend for Nix "
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
futures = "0.3"
indexmap = "2"
indicatif = { git = "https://github.com/remi-dupre/indicatif", branch = "main" }
once_cell = "1"
regex = "1"
serde_json = { version = "1", features = ["raw_value"] }
serde_repr = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "time"] }

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "parser"
harness = false
