[package]
name = "pinix"
version = "0.3.2"
description = "Progress In Nix - Pacman inspired frontend for Nix"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/remi-dupre/pinix"
homepage = "https://github.com/remi-dupre/pinix"
keywords = ["nix", "progress"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "string"] }
console = "0.15"
futures = "0.3"
indexmap = "2"
indicatif = { version = "0.17", git = "https://github.com/remi-dupre/indicatif", branch = "main" }
once_cell = "1"
regex = "1"
serde_json = { version = "1", features = ["raw_value"] }
serde_repr = "0.1"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "time"] }

[dev-dependencies]
divan = "0.1"

[profile.release]
strip = true

[[bench]]
name = "parser"
harness = false
